# housefair-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.bot  Procfile  README.md  TZTelegrammBot.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/: auth.py  backup.py  database.py  deps.py  main.py  models.py  schemas.py
src/api/routers/: auth.py  chores.py  dashboard.py  families.py  members.py  products.py  shopping.py  stats.py
src/bot/: client.py  config.py  keyboards.py  main.py  scheduler.py  utils.py
src/bot/handlers/: admin_handler.py  chores.py  chores_handler.py  cooking_handler.py  done.py  lists.py  members.py  reports_handler.py  start.py
src/database/: models.py  repository.py
src/services/: chores_service.py  cooking_service.py  perplexity_service.py  reports_service.py  scheduler.py
src/utils/: helpers.py  logger.py
tests/: conftest.py  test_chores.py  test_chores_api.py  test_cooking.py  test_families_api.py  test_members_api.py  test_reports.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx
webapp/src/api/: client.ts
webapp/src/components/: ChoreCard.tsx  Layout.tsx  ProductCard.tsx  ShoppingItemRow.tsx
webapp/src/hooks/: useAuth.ts  useTelegram.ts
webapp/src/pages/: Chores.tsx  Dashboard.tsx  Products.tsx  Shopping.tsx  Stats.tsx
webapp/src/types/: api.ts
