[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "housefair-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111",
    "sqlmodel>=0.0.19",
    "httpx>=0.27",
    "python-telegram-bot[job-queue]>=21.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
